<resources>
    <string name="app_name"></string>
    <string name="usuarioLabel">Usuario</string>
    <string name="contraseñaLabel">Contraseña</string>
    <string name="Login">Iniciar</string>
    <string name="Regitrar">Registrarse</string>
    <string name="olvide">Olvide contraseña</string>
    <string name="registro">Registro \n</string>
    <string name="nombre">Nombre completo</string>
    <string name="contraseña">Contraseña</string>
    <string name="email">Email</string>
    <string name="tel">Número de telefono</string>
    <string name="Eddd">¿Eres mayor de edad?</string>
    <string name="Edad">Edad</string>
    <string name="Masculino">Masculino</string>
    <string name="Femenino">Femenino</string>
    <string name="Otro">Prefiero no decirlo</string>
    <string name="Sexo">Sexo</string>
    <string name="Regist">Registrarse</string>
    <string name="user">Usuario</string>
    <string name="Contra">Contraseña</string>
    <string name="Ini">Iniciar Sesión</string>
    <string name="Gustos">Gustos</string>
    <string name="Perro">Perritos</string>
    <string name="Gato">Gatitos</string>
    <string name="Otre">Otros</string>
    <string name="Regresar">←</string>
    <string name="Redes">Redes socailes</string>
    <string name="PagOlvide">Oh no! Olvidaste tu contraseña \n\nDeberias de ser mas cuidados@</string>
    <string name="PagPrincipal">Tus contraseñas</string>
</resources>